# microrust

./: Cargo.toml  Embed.toml  README.md  memory.x  rust-toolchain.toml
.cargo/: config.toml
micro-macro/: Cargo.toml
micro-macro-core/: Cargo.toml
micro-macro-core/src/: lib.rs
micro-macro/src/: lib.rs
src/: main.rs
